<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guitar Guru</string>
    <string name="action_settings">Settings</string>
    <string name="Button3">Practice Sessions</string>
    <string name="PracticeSessions_Button1">Practice Chord Transitions</string>    
    <string name="PracticeSessions_Button2">Guess the Chord Game</string>        
    <string name="PracticeSessionsChordTransitions_EditTextHint1">Chord #1</string>    
    <string name="PracticeSessionsChordTransitions_EditTextHint2">Chord #2</string>    
    <string name="PracticeSessionsChordTransitions_EditTextHint3">Chord #3</string>    
    <string name="PracticeSessionsChordTransitions_EditTextHint4">Chord #4</string>    
    <string name="PracticeSessionsChordTransitions_EditTextHint5">Chord #5</string>    
    <string name="PracticeSessionsChordTransitions_EditTextHint6">Chord #6</string>    
    <string name="PracticeSessionsChordTransitions_TextView1">2) Transition delay (Secs) </string>    
    <string name="PracticeSessionsChordTransitions_TextView2">3) Randomize Chord order </string> 
    <string name="PracticeSessionsChordTransitions_TextView3">1) Enter the Chords you wish to practice</string>    
    <string name="PracticeSessionsChordTransitions_EditTextHint7">(1 to 9)</string>    
    <string name="generatePracticeSession_Button1">Start Practice Session</string>  
    <string name="Generatepractivcesessiondisplay_ButtonText">Pause</string>  
    <string name="GuessTheChordGameDisplay_Heading">Press PLAY and guess the Chord played</string>      
    <string name="GuessTheChordGameDisplay_OptionsHeading">Choose from the options below</string>      
    <string name="GuessTheChordGameDisplay_PlayButton">PLAY</string>  
    <string name="GuessTheChordGameDisplay_NextButton">NEXT >></string>      
    <string name="chordsMainList_button1">Basic 8 Open Chords</string>      
    <string name="chordsMainList_button2">Dominant 7th Open Chords</string>      
    <string name="chordsMainList_button3">F Chord for Beginners</string>      
    <string name="chordsMainList_button4">Suspended Open Chords</string>      
    <string name="chordsMainList_button5">Common Open Slash Chords</string>      
    <string name="chordsMainList_button6">Power Chords</string>   
    <string name="MainPageHeading1_text">For your Practice</string>   
    <string name="MainPageHeading2_text">All about Chords</string> 
    <string name="basiceight_Button1">D Chord</string>  
    <string name="basiceight_Button2">A Chord</string> 
    <string name="basiceight_Button3">E Chord</string> 
    <string name="basiceight_Button4">G Chord</string> 
    <string name="basiceight_Button5">C Chord</string> 
    <string name="basiceight_Button6">A Min Chord</string> 
    <string name="basiceight_Button7">E Min Chord</string> 
    <string name="basiceight_Button8">D Min Chord</string>
    <string name="contentDescriptor">Place Holder</string>    
    <string name="chordDisplay_PlayButton">PLAY</string>  
    <string name="commonopenslash_Button1">D/F# Chord</string>
    <string name="commonopenslash_Button2">G/B Chord</string>
    <string name="commonopenslash_Button3">C/G Chord</string>
    <string name="domSeventh_Button1">A7 Dom Chord</string>
    <string name="domSeventh_Button2">B7 Dom Chord</string>
    <string name="domSeventh_Button3">C7 Dom Chord</string>
    <string name="domSeventh_Button4">D7 Dom Chord</string>
    <string name="domSeventh_Button5">E7 Dom Chord</string>
    <string name="domSeventh_Button6">G7 Dom Chord</string>
    <string name="domSeventhPageHeading_text">Dominant 7th Open Chords</string>
    <string name="basicEightPageHeading_text">Basic Eight Open Chords</string>
 	<string name="fChordPageHeading_text">F Chords</string>
 	<string name="fBarreChord_Button1">F Barre Chord</string>
 	<string name="susOpenPageHeading_text">Suspended Open Chords</string>
 	<string name="susOpen_Button1">Asus2 Chord</string>
 	<string name="susOpen_Button2">Asus4 Chord</string>
 	<string name="susOpen_Button3">Dsus2 Chord</string>
 	<string name="susOpen_Button4">Dsus4 Chord</string>
 	<string name="susOpen_Button5">Esus4 Chord</string>
 	<string name="powerChordPageHeading_text">Power Chords</string>
 	<string name="power_Button1">G5 Power Chord</string>
 	<string name="power_Button2">C5 Power Chord</string>
 	<string name="slashChordPageHeading_text">Common Open Slash Chords</string>
 	<string name="action_about">about</string>
 	<string name="settingsPageHeading_text">About Guitar Guru</string>	
 	<string name="settingsPage_text1">Send in your feedback, comments and feature requests to:-</string>	
 	<string name="settingsPage_text2">Email: davinciapps.in@gmail.com</string>	
 	<string name="settingsPage_text3">Website: www.davinciapps.in</string>
 	<string name="settingsPage_text4">If you like the App, please provide your rating and comments on Play store </string>	
 	<string name="settingsPage_text6">A DaVinciApps Production</string>	
 	<string name="allChordslist_text">Complete Chords List</string>	
 	<string name="allChords_Button1">D Chord</string>
 	<string name="allChords_Button2">A Chord</string>
 	<string name="allChords_Button3">E Chord</string>
 	<string name="allChords_Button4">G Chord</string>	
 	<string name="allChords_Button5">C Chord</string>
 	<string name="allChords_Button6">A Min Chord</string>
 	<string name="allChords_Button7">E Min Chord</string>
 	<string name="allChords_Button8">D Min Chord</string>
 	<string name="allChords_Button9">A7 Dom Chord</string>
 	<string name="allChords_Button10">B7 Dom Chord</string>
 	<string name="allChords_Button11">C7 Dom Chord</string>
 	<string name="allChords_Button12">D7 Dom Chord</string>
 	<string name="allChords_Button13">E7 Dom Chord</string>
 	<string name="allChords_Button14">G7 Dom Chord</string>
 	<string name="allChords_Button15">F Barre Chord</string>
 	<string name="allChords_Button16">Asus2 Chord</string>
 	<string name="allChords_Button17">Asus4 Chord</string>
 	<string name="allChords_Button18">Dsus2 Chord</string>
 	<string name="allChords_Button19">Dsus4 Chord</string>
 	<string name="allChords_Button20">Esus4 Chord</string>
 	<string name="allChords_Button21">D/F# Chord</string>
 	<string name="allChords_Button22">G/B Chord</string>
 	<string name="allChords_Button23">C/G Chord</string>
 	<string name="allChords_Button24">G5 Power Chord</string>
 	<string name="allChords_Button25">C5 Power Chord</string>			
</resources>
