<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView 
        android:id="@+id/MainPageHeading1" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@color/green"        
        android:text="@string/MainPageHeading1_text"
        android:textSize="20sp"
        android:layout_marginTop="0dp"   
        android:layout_marginBottom="10dp" 
        android:gravity="center"/>

    <Button
        android:id="@+id/PracticeSessions_Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="practiceSessionsChordTransitions"
        android:layout_below="@id/MainPageHeading1"
        android:text="@string/PracticeSessions_Button1" />

    <Button
        android:id="@+id/PracticeSessions_Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PracticeSessions_Button1"
        android:onClick="practiceSessionsGuessTheChord"
        android:text="@string/PracticeSessions_Button2" />
	<TextView 
        android:id="@+id/MainPageHeading2" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@id/PracticeSessions_Button2"
        android:background="@color/green"   
        android:layout_marginTop="10dp"   
        android:layout_marginBottom="10dp" 
        android:textSize="20sp"      
        android:text="@string/MainPageHeading2_text"
        android:gravity="center"/>
    <Button
        android:id="@+id/chordsMainList_button0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MainPageHeading2"
        android:onClick="allChordsList"
        android:text="@string/allChordslist_text" />
    <Button
        android:id="@+id/chordsMainList_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chordsMainList_button0"
        android:onClick="basicEightOpenChords"
        android:text="@string/chordsMainList_button1" />

    <Button
        android:id="@+id/chordsMainList_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chordsMainList_button1"
        android:onClick="dominantSeventhOpenChords"
        android:text="@string/chordsMainList_button2" />

    <Button
        android:id="@+id/chordsMainList_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chordsMainList_button2"
        android:onClick="fChordForBeginners"
        android:text="@string/chordsMainList_button3" />

    <Button
        android:id="@+id/chordsMainList_button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chordsMainList_button3"
        android:onClick="suspendedOpenChords"
        android:text="@string/chordsMainList_button4" />

    <Button
        android:id="@+id/chordsMainList_button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chordsMainList_button4"
        android:onClick="commonOpenSlashChords"
        android:text="@string/chordsMainList_button5" />

    <Button
        android:id="@+id/chordsMainList_button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chordsMainList_button5"
        android:onClick="powerChords"
        android:text="@string/chordsMainList_button6" />

</RelativeLayout>
</ScrollView>