<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout 
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <TextView 
        android:id="@+id/basicEightPageHeading" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@color/green"        
        android:text="@string/basicEightPageHeading_text"
        android:textSize="20sp"
        android:layout_marginTop="10dp"   
        android:layout_marginBottom="10dp" 
        android:gravity="center"/>
    <Button
        android:id="@+id/basiceight_Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loadDChordDetailPage"
        android:layout_below="@id/basicEightPageHeading"
        android:text="@string/basiceight_Button1" />

    <Button
        android:id="@+id/basiceight_Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/basiceight_Button1"
        android:onClick="loadAChordDetailPage"
        android:text="@string/basiceight_Button2" />
	
    <Button
        android:id="@+id/basiceight_Button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/basiceight_Button2"
        android:onClick="loadEChordDetailPage"
        android:text="@string/basiceight_Button3" />

    <Button
        android:id="@+id/basiceight_Button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/basiceight_Button3"
        android:onClick="loadGChordDetailPage"
        android:text="@string/basiceight_Button4" />

    <Button
        android:id="@+id/basiceight_Button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/basiceight_Button4"
        android:onClick="loadCChordDetailPage"
        android:text="@string/basiceight_Button5" />

    <Button
        android:id="@+id/basiceight_Button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/basiceight_Button5"
        android:onClick="loadAminChordDetailPage"
        android:text="@string/basiceight_Button6" />

    <Button
        android:id="@+id/basiceight_Button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/basiceight_Button6"
        android:onClick="loadEminChordDetailPage"
        android:text="@string/basiceight_Button7" />
    <Button
        android:id="@+id/basiceight_Button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/basiceight_Button7"
        android:onClick="loadDminChordDetailPage"
        android:text="@string/basiceight_Button8" />

</RelativeLayout>
</ScrollView>