<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout 
    android:id="@+id/relativeLayout_PracticeSessionsForm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <TextView 
        android:id="@+id/chordType_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginBottom="20dp"
	    android:textStyle="bold"
	    android:text="@string/PracticeSessionsChordTransitions_TextView3"/>
    <EditText 
        android:id="@+id/chordTransition_text1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="textCapCharacters"
        android:layout_below="@id/chordType_text1"
    	android:hint="@string/PracticeSessionsChordTransitions_EditTextHint1" />
	<EditText 
        android:id="@+id/chordTransition_text2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="textCapCharacters"        
        android:layout_toRightOf="@id/chordTransition_text1"
        android:layout_below="@id/chordType_text1"        
        android:layout_alignParentRight="true"
    	android:hint="@string/PracticeSessionsChordTransitions_EditTextHint2" />
	<EditText 
        android:id="@+id/chordTransition_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters" 
        android:layout_below="@id/chordTransition_text1"
        android:layout_alignParentLeft="true"
    	android:hint="@string/PracticeSessionsChordTransitions_EditTextHint3" />
	<EditText 
        android:id="@+id/chordTransition_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters" 
        android:layout_below="@id/chordTransition_text2"
        android:layout_toRightOf="@id/chordTransition_text3"
        android:layout_alignParentRight="true"
    	android:hint="@string/PracticeSessionsChordTransitions_EditTextHint4" />
	<EditText 
        android:id="@+id/chordTransition_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters" 
        android:layout_below="@id/chordTransition_text3"
        android:layout_alignParentLeft="true"
    	android:hint="@string/PracticeSessionsChordTransitions_EditTextHint5" />
	<EditText 
        android:id="@+id/chordTransition_text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters" 
        android:layout_below="@id/chordTransition_text4"
        android:layout_toRightOf="@id/chordTransition_text5"
        android:layout_alignParentRight="true"
    	android:hint="@string/PracticeSessionsChordTransitions_EditTextHint6" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textStyle="bold"
	    android:layout_alignLeft="@+id/chordTransition_text5"
	    android:layout_below="@+id/chordTransition_text5"
	    android:layout_alignParentRight="true"
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="10dp"
	    android:text="@string/PracticeSessionsChordTransitions_TextView1" />

	<EditText 
        android:id="@+id/chordTransition_text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chordTransition_text6"
        android:layout_alignParentRight="true"
        android:inputType="number"
	    android:layout_marginTop="20dp"
	    android:layout_marginRight="10dp"
    	android:hint="@string/PracticeSessionsChordTransitions_EditTextHint7" />
	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/textView1"
	    android:textStyle="bold"
	    android:layout_alignParentLeft="true"
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="10dp"
	    android:text="@string/PracticeSessionsChordTransitions_TextView2" />
	<CheckBox
	    android:id="@+id/chordRamdomizerCheck"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_alignRight="@id/textView2"        
        android:layout_below="@id/chordTransition_text7"
        android:layout_marginTop="15dp"
	    android:layout_marginRight="15dp"
        android:layout_alignParentRight="true" />
	<Button
	    android:id="@+id/generatePracticeSession_Button1"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/generatePracticeSession_Button1"
        android:layout_below="@id/chordRamdomizerCheck"
        android:onClick="startPracticeSession" />
	    
        
</RelativeLayout>
</ScrollView>