<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <TextView 
        android:id="@+id/slashChordPageHeading" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@color/green"        
        android:text="@string/slashChordPageHeading_text"
        android:textSize="20sp"
        android:layout_marginTop="10dp"   
        android:layout_marginBottom="10dp" 
        android:gravity="center"/>
    <Button
        android:id="@+id/commonopenslash_Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loadDSlashFChordDetailPage"
        android:layout_below="@id/slashChordPageHeading"
        android:text="@string/commonopenslash_Button1" />

    <Button
        android:id="@+id/commonopenslash_Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commonopenslash_Button1"
        android:onClick="loadGSlashBChordDetailPage"
        android:text="@string/commonopenslash_Button2" />
	
    <Button
        android:id="@+id/commonopenslash_Button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commonopenslash_Button2"
        android:onClick="loadCSlashGChordDetailPage"
        android:text="@string/commonopenslash_Button3" />

</RelativeLayout>
